# EchoGL-Core

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
scripts/: test_smoke.py
src/core/: CMakeLists.txt
src/data/: CMakeLists.txt  DBManager.cpp  DBManager.hpp  DatabaseException.hpp  SQLiteHandles.hpp  schema.sql
src/data/models/: Game.hpp
src/providers/: CMakeLists.txt
src/ui/: CMakeLists.txt
